tests/errors/preprocessor/017_branch.c
int a = 0;
int main() {
#if 0
    a = 1;
/#endif
    return a;
}